Edit size and location fo the image

--- a/recipes/Oyako-Donburi.html
+++ b/recipes/Oyako-Donburi.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="en" class="oyakodon">
   <head>
     <meta charset="UTF-8">
     <title>Oyakodon</title>
+    <link rel="stylesheet" href="oyakodon.css">
   </head>
   
   <body>
     <h1>Oyakodon</h1>
-    <img src="../assets/Oyakodon.jpeg">
+    <img class="oyakodon-image" src="../assets/Oyakodon.jpeg">
     <h2>Description</h2>
     <p>Oyakodon, literally "parent-and-child donburi", is a donburi, or Japanese rice bowl dish, in which chicken, egg, sliced scallion, and other ingredients are all simmered together in a kind of soup that is made with soy sauce and stock, and then served on top of a large bowl of rice.p>
     
