--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
   
   <body>
     <h1>Odin Recipes</h1>
-    <ul>
-      <li>
-        <a href="./recipes/chicken-ramen-bowl.html">Chicken Ramen Bowl</a>
-      </li>
-      <li>
-        <a href="./recipes/Chiken-Katsu.html">Chiken Katsu with Tonkatsu sauce</a>
-      </li>
-      <li>
-        <a href="./recipes/Oyako-Donburi.html">Oyakodon</a>
-      </li>
-    </ul>
+      <div class="container">
+        <button>
+          <a class="Menu" href="./recipes/chicken-ramen-bowl.html">Chicken Ramen Bowl</a>
+        </button>
+        <button>
+          <a class="Menu" href="./recipes/Chiken-Katsu.html">Chiken Katsu with Tonkatsu sauce</a>
+        </button>
+        <button> 
+          <a class="Menu" href="./recipes/Oyako-Donburi.html">Oyakodon</a>
+        </button>  
+      </div>
   </body>
 </html>
