Add background-color and color to the titles

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="en" class="Main">
   <head>
     <meta charset="UTF-8">
     <title>recipes</title>
@@ -8,17 +8,17 @@
   </head>
   
   <body>
-    <h1>Odin Recipes</h1>
-      <div class="container">
-        <button>
-          <a class="Menu" href="./recipes/chicken-ramen-bowl.html">Chicken Ramen Bowl</a>
-        </button>
-        <button>
-          <a class="Menu" href="./recipes/Chiken-Katsu.html">Chiken Katsu with Tonkatsu sauce</a>
-        </button>
-        <button> 
+    <h1 class="Title">Odin Recipes</h1>
+      <ul>
+        <li>
+            <a class="Menu" href="./recipes/chicken-ramen-bowl.html">Chicken Ramen Bowl</a>
+        </li>
+        <li>
+            <a class="Menu" href="./recipes/Chiken-Katsu.html">Chiken Katsu with Tonkatsu sauce</a>
+        </li>
+        <li>
           <a class="Menu" href="./recipes/Oyako-Donburi.html">Oyakodon</a>
-        </button>  
-      </div>
+        </li>
+      </ul>
   </body>
 </html>
