--- a/recipes/Chiken-Katsu.html
+++ b/recipes/Chiken-Katsu.html
@@ -4,11 +4,13 @@
   <head>
     <meta charset="UTF-8">
     <title>Chicken Katsu Recipe</title>
+    <link rel="stylesheet" href="../styles.css">
   </head>
   
-  <body>
-    <h1>Chicken Katsu</h1>
-    <img src="../assets/tonkatsu.webp">
+  <body class="Chicken-katsu">
+    <h1 class="Title">Chicken Katsu</h1>
+    <img class="Picture" src="../assets/tonkatsu.webp" alt="white rice with chicken katsu" >
+
     <h2>Description</h2>
     <p>A recipe for delicious Japanese fried chicken and an accompanying Tonkatsu sauce. Serve with your choice of shredded cabbage, rice, or even mashed potatoes.</p>
     
