--- a/recipes/Oyako-Donburi.html
+++ b/recipes/Oyako-Donburi.html
@@ -4,12 +4,12 @@
   <head>
     <meta charset="UTF-8">
     <title>Oyakodon</title>
-    <link rel="stylesheet" href="oyakodon.css">
+    <link rel="stylesheet" href="../styles.css">
   </head>
   
-  <body>
-    <h1>Oyakodon</h1>
-    <img class="oyakodon-image" src="../assets/Oyakodon.jpeg">
+  <body class="Oyakodon">
+    <h1 class="Title">Oyakodon</h1>
+    <img class="Picture" src="../assets/Oyakodon.jpeg" alt="rice with chicken egg in a bowl">
     <h2>Description</h2>
     <p>Oyakodon, literally "parent-and-child donburi", is a donburi, or Japanese rice bowl dish, in which chicken, egg, sliced scallion, and other ingredients are all simmered together in a kind of soup that is made with soy sauce and stock, and then served on top of a large bowl of rice.p>
     
