--- a/recipes/chicken-ramen-bowl.html
+++ b/recipes/chicken-ramen-bowl.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="en" class="ramen">
   <head>
     <meta charset="UFT-8">
     <title>Chicken Ramen Bowl Recipe</title>
+    <link rel="stylesheet" href="../styles.css">
   </head>
   
-  <body>
-    <h1>Chicken Ramen Bowl</h1>
-    <img src="../assets/chicken-ramen-bowl-1.webp" alt="ramen bowl with tinted grey chicken breast">
+  <body class="Chicken-ramen">
+    <h1 class="Title">Chicken Ramen Bowl</h1>
+    <img src="../assets/chicken-ramen-bowl-1.webp" alt="ramen bowl with tinted grey chicken breast" class="Picture">
     <h2>Description</h2>
     <p> A chicken ramen bowl is a popular Japanese dish made with a combination of noodles, broth, chicken, and various other toppings. The dish typically consists of cooked ramen noodles that are served in a savory chicken broth, which has been flavored with soy sauce, miso paste, or other seasonings. The chicken is usually sliced or shredded and added to the broth, along with vegetables such as carrots, mushrooms, and bok choy. The dish is typically garnished with green onions, sesame seeds, and sometimes a boiled egg. Chicken ramen bowls are a hearty and satisfying meal that are popular around the world. 
     </p>
