Delete list style

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   
   <body>
     <h1 class="Title">Odin Recipes</h1>
-      <ul>
+    <nav>
+      <ul class="Link-list">
         <li>
             <a class="Menu" href="./recipes/chicken-ramen-bowl.html">Chicken Ramen Bowl</a>
         </li>
@@ -20,5 +21,7 @@
           <a class="Menu" href="./recipes/Oyako-Donburi.html">Oyakodon</a>
         </li>
       </ul>
+    </nav>
+      
   </body>
 </html>
