Update font family and adjust total width of the body

--- a/recipes/Chiken-Katsu.html
+++ b/recipes/Chiken-Katsu.html
@@ -9,7 +9,7 @@
   
   <body class="Chicken-katsu">
     <h1 class="Title">Chicken Katsu</h1>
-    <img class="Picture" src="../assets/tonkatsu.webp" alt="white rice with chicken katsu" >
+    <img class="Picture" src="../images/tonkatsu.webp" alt="white rice with chicken katsu" >
 
     <div class="Description">
       <h2>Description</h2>
