--- a/recipes/Oyako-Donburi.html
+++ b/recipes/Oyako-Donburi.html
@@ -10,7 +10,7 @@
   <body class="Oyakodon">
 
     <h1 class="Title">Oyakodon</h1>
-    <img class="Picture" src="../assets/Oyakodon.jpeg" alt="rice with chicken egg in a bowl">
+    <img class="Picture" src="../images/Oyakodon.jpeg" alt="rice with chicken egg in a bowl">
     <div class="Description">
       <h2>Description</h2>
       <p>Oyakodon, literally "parent-and-child donburi", is a donburi, or Japanese rice bowl dish, in which chicken, egg, sliced scallion, and other ingredients are all simmered together in a kind of soup that is made with soy sauce and stock, and then served on top of a large bowl of rice.p>
