Comment on codes

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
-<!DOCTYPE html>
-
-<html lang="en" class="Main">
+<!-- Tells browser to use HTML 5 --> 
+<!DOCTYPE html> 
+<!-- every other elements go under html tag. Tells browser that contents of this document is written in English.  -->
+<html lang="en" class="Main"> 
+  <!-- Head tag contains meta data such as title of the file -->
   <head>
     <meta charset="UTF-8">
     <title>recipes</title>
